# resolvent4py

./: .gitignore  CONTRIBUTORS  README.md  compile_sphinx.sh  install_command.txt  pyproject.toml  setup.py
.github/workflows/: tests.yml
LinToolbox4py/: __init__.py  io_functions.py  linear_operator.py  linear_solver.py  petsc4py_helper_functions.py
debugging/: generate_random_matrices.py  main.py  petsc4py_helper_functions.py  test_eigendecomp.py
diagnostics/linear_operators/: low_rank_scalability.py  low_rank_scalability_plot.py  scaling_apply.csv  scaling_apply_ht.csv  scaling_apply_ht_mat.csv  scaling_apply_mat.csv
diagnostics/memory_usage/applications/: eig.py
diagnostics/memory_usage/linear_operators/: matrix_linear_operator.py
docs/source/: LinToolbox4py.rst  api-reference.rst  applications.rst  conf.py  index.rst  linalg.rst  linear_operators.rst  model_reduction.rst  modules.rst  quickstart.rst  refs.bib  refs.rst  resolvent4py.rst  sg_execution_times.rst  utils.rst
docs/source/_static/: custom.css
examples/cgl/: README.rst  cgl.py  demonstrate_balanced_truncation.py  demonstrate_eigendecomposition.py  demonstrate_rsvd.py  demonstrate_rsvd_dt.py  generate_matrices.py
examples/toy_model/: README.rst  demonstrate_harmonic_balanced_matrix.py  demonstrate_harmonic_resolvent.py  generate_matrices.py  generate_matrices_new.py  main.py  toy_model.py
resolvent4py/: __init__.py  comms.py  error_handling_functions.py  io_functions.py  linalg.py  linear_operators.py  miscellaneous.py  petsc4py_helper_functions.py  random.py  solvers_and_preconditioners_functions.py
resolvent4py/applications/: H2_optimization.py  H2_optimization_new.py  H2_optimization_new_new.py  __init__.py  balanced_truncation.py  eigendecomposition.py  randomized_svd.py  resolvent_analysis.py  steady_state_control.py
resolvent4py/helpers/: communication_functions.py  io_functions.py  linalg.py  miscellaneous.py  petsc_random.py
resolvent4py/linear_operators/: __init__.py  bv.py  input_output.py  linear_operator.py  low_rank.py  low_rank_updated.py  matrix.py  product.py  projected.py
resolvent4py/my_pymanopt_classes/: __init__.py  myAdaptiveLineSearcher.py  myBackTrackingLineSearcher.py
src/resolvent4py/: __init__.py  bv_helpers.py  comms.py  comms_helpers.py  error_handling_functions.py  io_functions.py  io_helpers.py  ksp_helpers.py  mat_helpers.py  miscellaneous.py  random.py  random_helpers.py  solvers_and_preconditioners_functions.py  vec_helpers.py
src/resolvent4py/applications/: __init__.py  balanced_truncation.py  eigendecomposition.py  randomized_svd.py
src/resolvent4py/controls/: H2_optimization.py  H2_optimization_new.py  H2_optimization_new_new.py
src/resolvent4py/helpers/: linalg.py  petsc_random.py
src/resolvent4py/linalg/: __init__.py  eigendecomposition.py  my_rsvd_dt.py  randomized_svd.py  randomized_time_stepping_svd.py  resolvent_analysis_time_stepping.py
src/resolvent4py/linear_operators/: __init__.py  linear_operator.py  low_rank.py  low_rank_updated.py  matrix.py  product.py  projection.py
src/resolvent4py/model_reduction/: __init__.py  balanced_truncation.py
src/resolvent4py/my_pymanopt_classes/: __init__.py  myAdaptiveLineSearcher.py  myBackTrackingLineSearcher.py
src/resolvent4py/utils/: __init__.py  bv.py  bv_helpers.py  comms.py  comms_helpers.py  errors_helpers.py  io.py  io_helpers.py  ksp.py  ksp_helpers.py  mat_helpers.py  matrix.py  miscellaneous.py  random.py  random_helpers.py  timesteppers.py  vec_helpers.py  vector.py
tests/: conftest.py  pytest_utils.py
tests/applications/: test_eigendecomposition.py  test_randomized_svd.py
tests/linalg/: test_eigendecomposition.py  test_my_rsvd_dt.py  test_randomized_svd.py  test_randomized_time_stepping_svd.py  test_resolvent_analysis_rsvd_dt.py
tests/linear_operators/: test_input_output.py  test_low_rank.py  test_low_rank_updated.py  test_matrix.py  test_matrix_pytest.py  test_product.py  test_projection.py
tests/model_reduction/: test_balanced_truncation.py
(+28 files in other folders)
